CLM-34837 schedule quartz job in mass (#13802)